testsuite/good/decorators/test_decorator_polymorphic_1/SuperType.flux
type SuperType {
   int methodToDecorate();
}
methods {
   int methodToDecorate() {
      return 0;
   }
}