testsuite/bad/MissingMethodType.flux
// All methods must have a return type

type MissingMethodType {
	oops();
}